<resources>
    <string name="app_name">WorldOfSnakes</string>

    <string name="nicknameInput_text">Nickname</string>
    <string name="passwordInput_text">Password</string>
    <string name="passwordInputRep_text">Confirm password</string>
    <string name="emailInput_text">E-Mail</string>

    <string name="authScreen_text">Authorization</string>
    <string name="regScreen_text">Registration</string>
    <string name="logInButton_text">Log in</string>
    <string name="registerButton_text">Register</string>

    <string name="oldPassInput_text">Old password</string>
    <string name="newPassInput_text">New password</string>
    <string name="newPassInputRep_text">Repeat password</string>
    <string name="changePasswordButton_text">Change password</string>

    <string name="singleplayerButton_text">Singleplayer</string>
    <string name="multiplayerButton_text">Multiplayer</string>
    <string name="profileButton_text">Profile</string>
    <string name="settingsButton_text">Settings</string>
</resources>
