<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screenBackground">

    <Button
        android:id="@+id/singleplayerButton"
        android:layout_width="330dp"
        android:layout_height="60dp"
        android:layout_marginTop="200dp"
        android:text="@string/singleplayerButton_text"
        android:background="@color/buttonBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/multiplayerButton"
        android:layout_width="330dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:text="@string/multiplayerButton_text"
        android:background="@color/buttonBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/singleplayerButton" />

    <Button
        android:id="@+id/profileButton"
        android:layout_width="330dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:text="@string/profileButton_text"
        android:background="@color/buttonBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/multiplayerButton" />

    <Button
        android:id="@+id/settingsButton"
        android:layout_width="330dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:text="@string/settingsButton_text"
        android:background="@color/buttonBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileButton" />
</androidx.constraintlayout.widget.ConstraintLayout>