<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screenBackground">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:contentDescription="profile icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/nicknameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="Users's Nickname"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/oldPasswordInput"
        android:layout_width="330dp"
        android:layout_height="60dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/oldPassInput_text"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/newPassInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/changePasswordButton"
        android:layout_width="330dp"
        android:layout_height="60dp"
        android:layout_marginBottom="32dp"
        android:background="@color/buttonBackground"
        android:text="@string/changePasswordButton_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/newPassInput"
        android:layout_width="330dp"
        android:layout_height="60dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/newPassInput_text"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/newPassInput_Rep"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/newPassInput_Rep"
        android:layout_width="330dp"
        android:layout_height="60dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/newPassInputRep_text"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/changePasswordButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>